recursion.lessons.recursion.koch.Crab.scala.error
Crab:7: error: not found: value crabcrab
		crabcrab(levels - 1, length / Math.sqrt(2))
                ^